--- a/react/package.json
+++ b/react/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.13",
     "axios": "^0.24.0",
+    "date-fns-tz": "^1.2.2",
     "firebase": "^9.4.1",
+    "prismic-reactjs": "^1.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
