--- a/react/package.json
+++ b/react/package.json
@@ -13,6 +13,7 @@
     "prismic-reactjs": "^1.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-number-format": "^4.9.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
     "styled-components": "^5.3.3",
